--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 html
 	head
 		meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no')
-		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
 		script(src='https://code.jquery.com/jquery-3.1.1.min.js' integrity='sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=' crossorigin='anonymous')
 		script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js' crossorigin='anonymous')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js' crossorigin='anonymous')
@@ -9,6 +9,8 @@ html
 		script(src='/js/frontendHelpers.js')
 		script(src='/js/fastclick.js')
 		script(src='/js/webgl-heatmap.js')
+		//link(rel='stylesheet' href='https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css')
+		script(src='https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js' crossorigin='anonymous')
 		link(rel='stylesheet', href='/css/site.css')
 		block scripts
 	body
