--- a/views/playerStatistics.pug
+++ b/views/playerStatistics.pug
@@ -1,10 +1,27 @@
 extends layout.pug
 
+block scripts
+	script.
+		$(document).ready(function(){
+			$('#player_scores_table').DataTable({
+				searching: false,
+		    	paging: false,
+		    	bInfo : false,
+		    	order: [[ 2,  'desc' ]],
+		        columnDefs: [
+		            {
+		                targets: [ 1 ],
+		                visible: true
+					}
+		        ]		    	
+			});
+		});
+
 block content
 	h2 Statistics for #{player.name}
 
 	div(class='table-responsive')
-		table(class='table table-striped table-bordered')
+		table(id='player_statistics_table' class='table table-striped table-bordered')
 			thead
 				tr
 					th Played
@@ -35,26 +52,31 @@ block content
 							p= player['180s'] == 0 ? "" : "180:  " + player['180s']
 
 	div(class='table-responsive')
-			table(class='table table-striped table-bordered')
-				thead
-					tr
-						th Dart
-						th Count
-						th Hit %
-				tbody
-					each score, key  in scores
-						each value, multiplier in scores[key]
-							tr
-								td(class='col-sm-2 dart-score-container')
-									if multiplier == 3
-										label(style='display:block; text-align:center; background-color: #d9534f')= 'T-' + key
-									else if multiplier == 2
-										label(style='display:block; text-align:center; background-color: orange')= 'D-' + key
+		h2 Hits	
+		table(id='player_scores_table' class='table table-striped table-bordered')
+			thead
+				tr
+					th Dart
+					th Count
+					th Hit %
+			tbody
+				each score, key  in scores
+					each value, multiplier in scores[key]
+						tr
+							td(class='col-sm-2 dart-score-container' data-order=key + multiplier)
+								if multiplier == 3
+									label(style='background-color: #d9534f')= 'T-' + key
+								else if multiplier == 2
+									if key == 25
+										label(style='background-color: orange') Bull
 									else
-										if key == 0
-											-key = 'Miss'
-										else if key == 25
-											-key = 'Bull'
-										label(style='display:block; text-align:center')= key
-								td= value
-								td= (value * 100 / scores.totalThrows).toFixed(2) + '%'
+										label(style='background-color: orange')= 'D-' + key
+								else
+									if key == 0 
+										label Miss
+									else if key == 25
+										label Bull
+									else
+										label= key
+							td= value
+							td= (value * 100 / scores.totalThrows).toFixed(2) + '%'
