--- a/views/results.pug
+++ b/views/results.pug
@@ -290,10 +290,10 @@ block content
 		Started: #{match.created_at} <br>
 		Finished: #{match.end_time === undefined ? '' : match.end_time} <br>
 		Duration: #{((Date.parse(match.end_time)/1000 - Date.parse(match.created_at)/1000) / (60)).toFixed()} minutes <br>
-		Stakes: #{match.stake === "" ? "None" : match.stake}
+		Stakes: #{match.stake === undefined ? "None" : match.stake}
 
 	if match.winner_id !== null
-		table(class='table table-striped table-bordered')
+		table(id='match_result_table' class='table table-striped table-bordered')
 			thead
 				tr
 					th Player
@@ -351,7 +351,7 @@ block content
 						td= players[throws.player_id].name
 						td(id='first-dart-visit-' + throws.id data-score=throws.first_dart)= throws.first_dart
 						td(id='first-dart-multiplier-visit-' + throws.id data-multiplier=throws.first_dart_multiplier)
-							select(class='form-control' name='first-dart-multiplier-vist' + throws.id)
+							select(class='form-control' name='first-dart-multiplier-vist' + throws.id disabled)
 								option(selected=throws.first_dart_multiplier === 1) Single
 								option(selected=throws.first_dart_multiplier === 2) Double
 								option(selected=throws.first_dart_multiplier === 3) Treble
@@ -359,7 +359,7 @@ block content
 							label(class='label label-success' class='first-dart-visit-total-' + throws.id)= throws.first_dart * throws.first_dart_multiplier
 						td(id='second-dart-visit-' + throws.id data-score=throws.second_dart)= throws.second_dart
 						td(id='second-dart-multiplier-visit-' + throws.id data-multiplier=throws.second_dart_multiplier)
-							select(class='form-control' name='second-dart-multiplier-vist' + throws.id)
+							select(class='form-control' name='second-dart-multiplier-vist' + throws.id disabled)
 								option(selected=throws.second_dart_multiplier === 1) Single
 								option(selected=throws.second_dart_multiplier === 2) Double
 								option(selected=throws.second_dart_multiplier === 3) Treble
@@ -367,7 +367,7 @@ block content
 							label(class='label label-success' class='second-dart-visit-total-' + throws.id)= throws.second_dart * throws.second_dart_multiplier
 						td(id='third-dart-visit-' + throws.id data-score=throws.third_dart)= throws.third_dart
 						td(id='third-dart-multiplier-visit-' + throws.id data-multiplier=throws.third_dart_multiplier)
-							select(class='form-control' name='second-dart-multiplier-vist' + throws.id)
+							select(class='form-control' name='second-dart-multiplier-vist' + throws.id disabled)
 								option(selected=throws.third_dart_multiplier === 1) Single
 								option(selected=throws.third_dart_multiplier === 2) Double
 								option(selected=throws.third_dart_multiplier === 3) Treble
