--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,8 +9,8 @@ html
 		script(src='/js/frontendHelpers.js')
 		script(src='/js/fastclick.js')
 		script(src='/js/webgl-heatmap.js')
-		//link(rel='stylesheet' href='https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css')
-		script(src='https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js' crossorigin='anonymous')
+		link(rel='stylesheet' type='text/css' href='https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.13/datatables.min.css' crossorigin='anonymous')
+		script(type='text/javascript' src='https://cdn.datatables.net/v/bs/jq-2.2.4/dt-1.10.13/datatables.min.js' crossorigin='anonymous')
 		link(rel='stylesheet', href='/css/site.css')
 		block scripts
 	body
