Added selector for singles, doubles, trebles to heatmap

--- a/views/owes.pug
+++ b/views/owes.pug
@@ -55,9 +55,8 @@ block content
 					td= owe.owe_type.item
 					td= owe.amount
 
-	h2 Payback Log
-	p This is an overview showing payback between players
-
+	//h2 Payback Log
+	//p This is an overview showing payback between players
 	//- table(class='table table-striped table-bordered')
 	//- 	thead
 	//- 		tr
