Added calculation of player accuracy for 20s and 19s

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block scripts
 		});
 
 block content
-	h1 Cake Darts Scorer
+	h1 Darts Scorer
 	p.
 		Here you can start a new darts game, or view players, owes or previous matches by selecting from the menu at the top
 	p
