--- a/views/results.pug
+++ b/views/results.pug
@@ -154,6 +154,13 @@ block scripts
 			var canvas = $('#dartboard-heatmap')[0];
 			drawHeatmap(canvas, scoresMap);
 		}
+		$(function () {
+			$("#heatmap_value_selector").change(function () {
+				var canvas = $('#dartboard-heatmap')[0];
+				var display = this.value;
+				drawHeatmap(canvas, scoresMap, display);
+			});
+		});		
 
 block content
 	h2 Results
@@ -253,6 +260,11 @@ block content
 								span(class="glyphicon glyphicon-edit" aria-hidden="true")
 
 	h3 Match Heatmap
+	select(id='heatmap_value_selector' name='dartValues')
+		option(value=0 default=true) All
+		option(value=1) Singles
+		option(value=2) Doubles
+		option(value=3) Trebles	
 	div(style='text-align: center;')
 		canvas(id='dartboard-heatmap')
 
