--- a/views/playerStatistics.pug
+++ b/views/playerStatistics.pug
@@ -7,22 +7,21 @@ block scripts
 				searching: false,
 				bInfo : false,
 				order: [[ 2,  'desc' ]],
-				columnDefs: [ { targets: [ 1 ], visible: true } ]	
+				columnDefs: [ { targets: [ 1 ], visible: true } ]
 			});
 		});
 	script.
+		var size = 5;
+		var spread = 20;
+		var intensity = 30;
 		var scoresMap = !{JSON.stringify(scoresMap)};
 		window.onload = (function(){
 		    var canvas = $('#dartboard-heatmap')[0];
-			drawHeatmap(canvas, scoresMap, 0, 5, 20, 30);
+			drawHeatmap(canvas, scoresMap, 0, size, spread, intensity);
 		});
 
 		$(function () {
 			$("#heatmap_value_selector").change(function () {
-				var size = 5;
-				var spread = 20;
-				var intensity = 30;
-
 				var canvas = $('#dartboard-heatmap')[0];
 				var display = this.value;
 				if (display == 2) {
@@ -31,8 +30,8 @@ block scripts
 				}
 				drawHeatmap(canvas, scoresMap, display, size, spread, intensity);
 			});
-		});		
-		
+		});
+
 block content
 	h2 Statistics for #{player.name}
 
@@ -68,7 +67,7 @@ block content
 							p= player['180s'] == 0 ? "" : "180:  " + player['180s']
 
 	div(class='table-responsive')
-		h2 Hits	
+		h2 Hits
 		table(id='player_scores_table' class='table table-striped table-bordered')
 			thead
 				tr
@@ -88,7 +87,7 @@ block content
 									else
 										label(style='background-color: orange')= 'D-' + key
 								else
-									if key == 0 
+									if key == 0
 										label Miss
 									else if key == 25
 										label Bull
