Fixed undo / submit bug

--- a/views/match.pug
+++ b/views/match.pug
@@ -183,6 +183,7 @@ block scripts
 					dart = $('#third');
 				}
 				dart.text('');
+				dart.removeAttr('data-score');
 			});
 
 			$('#seeScoresButton').click(function () {
