A few different changes and improvements

--- a/views/owes.pug
+++ b/views/owes.pug
@@ -41,8 +41,8 @@ block content
 	table(id='player_owes_table' class='table table-striped table-bordered')
 		thead
 			tr
-				th Ower
-				th Owee
+				th Buyer
+				th Receiver
 				th Item
 				th Amount
 		tbody
