--- a/views/matches.pug
+++ b/views/matches.pug
@@ -2,6 +2,16 @@ extends layout.pug
 
 block scripts
 	script.
+		$(document).ready(function(){
+			$('#matches_list_table').DataTable({
+				searching: false,
+				pageLength: 25,
+				bLengthChange: false,
+		    	bInfo : false,
+		    	order: [[ 1,  'desc' ]]
+		    });
+		});
+	script.
 		$(function() {
 			$('.btn-continue-match').click(function() {
 				window.location.href = '/match/' + $(this).closest('tr').find('th').text();
@@ -21,10 +31,10 @@ block content
 		table(class='table table-striped table-bordered' id='matches_list_table')
 			thead
 				tr
+					th(hidden=true)
 					th Start Time
 					th End Time
 					th Game Type
-					//th Stake
 					th Winner
 					th Players
 					th Results
@@ -35,7 +45,6 @@ block content
 						td(class='col-sm-2')= match.created_at
 						td(class='col-sm-2')= match.end_time === undefined ? '' : match.end_time
 						td(class='col-sm-2 txt-center')= match.starting_score
-						//td(class='col-sm-1')
 						if match.is_finished
 							td(class='col-sm-1')
 								div: span(class='label label-success' style='line-height: inherit;')=players[match.winner_id].name
