Testing of using socket.io for pushing score updates

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,7 @@ html
 		script(src='/js/fastclick.js')
 		script(src='/js/webgl-heatmap.js')
 		link(rel='stylesheet', href='/css/site.css')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js')
 		block scripts
 	body
 		div(class='container')
